docs/api/qiskit-ibm-runtime/0.21/qiskit_ibm_runtime.RuntimeJobV2.mdx
---
title: RuntimeJobV2
description: API reference for qiskit_ibm_runtime.RuntimeJobV2
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit_ibm_runtime.RuntimeJobV2
---

# RuntimeJobV2

<Class id="qiskit_ibm_runtime.RuntimeJobV2" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.21/qiskit_ibm_runtime/runtime_job_v2.py#L53-L335" signature="RuntimeJobV2(backend, api_client, client_params, job_id, program_id, service, params=None, creation_date=None, user_callback=None, result_decoder=None, image='', session_id=None, tags=None, version=None)">
  Representation of a runtime V2 primitive exeuction.

  RuntimeJob constructor.

  **Parameters**

  *   **backend** (`Backend`) – The backend instance used to run this job.
  *   **api\_client** (`RuntimeClient`) – Object for connecting to the server.
  *   **client\_params** (`ClientParameters`) – Parameters used for server connection.
  *   **job\_id** (`str`) – Job ID.
  *   **program\_id** (`str`) – ID of the program this job is for.
  *   **params** (`Optional`\[`Dict`]) – Job parameters.
  *   **creation\_date** (`Optional`\[`str`]) – Job creation date, in UTC.
  *   **user\_callback** (`Optional`\[`Callable`]) – User callback function.
  *   **result\_decoder** (`Union`\[`Type`\[`ResultDecoder`], `Sequence`\[`Type`\[`ResultDecoder`]], `None`]) – A `ResultDecoder` subclass used to decode job results.
  *   **image** (`Optional`\[`str`]) – Runtime image used for this job: image\_name:tag.
  *   **service** ([`QiskitRuntimeService`](qiskit_ibm_runtime.QiskitRuntimeService "qiskit_ibm_runtime.qiskit_runtime_service.QiskitRuntimeService")) – Runtime service.
  *   **session\_id** (`Optional`\[`str`]) – Job ID of the first job in a runtime session.
  *   **tags** (`Optional`\[`List`]) – Tags assigned to the job.
  *   **version** (`Optional`\[`int`]) – Primitive version.

  ## Attributes

  ### creation\_date

  <Attribute id="qiskit_ibm_runtime.RuntimeJobV2.creation_date" name="creation_date">
    Job creation date in local time.

    **Return type**

    `Optional`\[`datetime`]

    **Returns**

    The job creation date as a datetime object, in local time, or `None` if creation date is not available.
  </Attribute>

  ### image

  <Attribute id="qiskit_ibm_runtime.RuntimeJobV2.image" name="image">
    Return the runtime image used for the job.

    **Returns**

    image\_name:tag or “” if the default image is used.

    **Return type**

    Runtime image
  </Attribute>

  ### inputs

  <Attribute id="qiskit_ibm_runtime.RuntimeJobV2.inputs" name="inputs">
    Job input parameters.

    **Return type**

    `Dict`

    **Returns**

    Input parameters used in this job.
  </Attribute>

  ### program\_id

  <Attribute id="qiskit_ibm_runtime.RuntimeJobV2.program_id" name="program_id">
    Program ID.

    **Return type**

    `str`

    **Returns**

    ID of the program this job is for.
  </Attribute>

  ### session\_id

  <Attribute id="qiskit_ibm_runtime.RuntimeJobV2.session_id" name="session_id">
    Session ID.

    **Return type**

    `str`

    **Returns**

    Session ID. None if the backend is a simulator.
  </Attribute>

  ### tags

  <Attribute id="qiskit_ibm_runtime.RuntimeJobV2.tags" name="tags">
    Job tags.

    **Return type**

    `List`

    **Returns**

    Tags assigned to the job that can be used for filtering.
  </Attribute>

  ### usage\_estimation

  <Attribute id="qiskit_ibm_runtime.RuntimeJobV2.usage_estimation" name="usage_estimation">
    Return the usage estimation infromation for this job.

    **Return type**

    `Dict`\[`str`, `Any`]

    **Returns**

    `quantum_seconds` which is the estimated system execution time of the job in seconds. Quantum time represents the time that the system is dedicated to processing your job.
  </Attribute>

  ## Methods

  ### backend

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.backend" name="backend" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.21/qiskit_ibm_runtime/runtime_job_v2.py#L271-L285" signature="backend(timeout=None)">
    Return the backend where this job was executed. Retrieve data again if backend is None.

    **Raises**

    **IBMRuntimeError** – If a network error occurred.

    **Return type**

    `Optional`\[`Backend`]
  </Function>

  ### cancel

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.cancel" name="cancel" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.21/qiskit_ibm_runtime/runtime_job_v2.py#L154-L168" signature="cancel()">
    Cancel the job.

    **Raises**

    *   **RuntimeInvalidStateError** – If the job is in a state that cannot be cancelled.
    *   **IBMRuntimeError** – If unable to cancel job.

    **Return type**

    `None`
  </Function>

  ### cancel\_result\_streaming

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.cancel_result_streaming" name="cancel_result_streaming" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.21/qiskit_ibm_runtime/base_runtime_job.py#L149-L153" signature="cancel_result_streaming()">
    Cancel result streaming.

    **Return type**

    `None`
  </Function>

  ### cancelled

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.cancelled" name="cancelled" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.21/qiskit_ibm_runtime/runtime_job_v2.py#L193-L195" signature="cancelled()">
    Return whether the job has been cancelled.

    **Return type**

    `bool`
  </Function>

  ### done

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.done" name="done" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.21/qiskit_ibm_runtime/runtime_job_v2.py#L197-L199" signature="done()">
    Return whether the job has successfully run.

    **Return type**

    `bool`
  </Function>

  ### error\_message

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.error_message" name="error_message" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.21/qiskit_ibm_runtime/base_runtime_job.py#L212-L219" signature="error_message()">
    Returns the reason if the job failed.

    **Return type**

    `Optional`\[`str`]

    **Returns**

    Error message string or `None`.
  </Function>

  ### errored

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.errored" name="errored" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.21/qiskit_ibm_runtime/runtime_job_v2.py#L201-L203" signature="errored()">
    Return whether the job has failed.

    **Return type**

    `bool`
  </Function>

  ### in\_final\_state

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.in_final_state" name="in_final_state" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.21/qiskit_ibm_runtime/runtime_job_v2.py#L205-L207" signature="in_final_state()">
    Return whether the job is in a final job state such as `DONE` or `ERROR`.

    **Return type**

    `bool`
  </Function>

  ### interim\_results

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.interim_results" name="interim_results" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.21/qiskit_ibm_runtime/runtime_job_v2.py#L317-L335" signature="interim_results(decoder=None)">
    Return the interim results of the job.

    **Parameters**

    **decoder** (`Optional`\[`Type`\[`ResultDecoder`]]) – A `ResultDecoder` subclass used to decode interim results.

    **Return type**

    `Any`

    **Returns**

    Runtime job interim results.

    **Raises**

    **RuntimeJobFailureError** – If the job failed.
  </Function>

  ### job\_id

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.job_id" name="job_id" signature="job_id()">
    Return a unique id identifying the job.

    **Return type**

    `str`
  </Function>

  ### logs

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.logs" name="logs" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.21/qiskit_ibm_runtime/runtime_job_v2.py#L213-L232" signature="logs()">
    Return job logs.

    <Admonition title="Note" type="note">
      Job logs are only available after the job finishes.
    </Admonition>

    **Return type**

    `str`

    **Returns**

    Job logs, including standard output and error.

    **Raises**

    **IBMRuntimeError** – If a network error occurred.
  </Function>

  ### metrics

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.metrics" name="metrics" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.21/qiskit_ibm_runtime/base_runtime_job.py#L155-L167" signature="metrics()">
    Return job metrics.

    **Return type**

    `Dict`\[`str`, `Any`]

    **Returns**

    Job metrics, which includes timestamp information.

    **Raises**

    **IBMRuntimeError** – If a network error occurred.
  </Function>

  ### properties

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.properties" name="properties" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.21/qiskit_ibm_runtime/base_runtime_job.py#L198-L210" signature="properties(refresh=False)">
    Return the backend properties for this job.

    **Parameters**

    **refresh** (`bool`) – If `True`, re-query the server for the backend properties. Otherwise, return a cached version.

    **Return type**

    `Optional`\[`BackendProperties`]

    **Returns**

    The backend properties used for this job, at the time the job was run, or `None` if properties are not available.
  </Function>

  ### result

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.result" name="result" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.21/qiskit_ibm_runtime/runtime_job_v2.py#L113-L152" signature="result(timeout=None, decoder=None)">
    Return the results of the job.

    **Parameters**

    *   **timeout** (`Optional`\[`float`]) – Number of seconds to wait for job.
    *   **decoder** (`Optional`\[`Type`\[`ResultDecoder`]]) – A `ResultDecoder` subclass used to decode job results.

    **Return type**

    `Any`

    **Returns**

    Runtime job result.

    **Raises**

    *   **RuntimeJobFailureError** – If the job failed.
    *   **RuntimeJobMaxTimeoutError** – If the job does not complete within given timeout.
    *   **RuntimeInvalidStateError** – If the job was cancelled, and attempting to retrieve result.
  </Function>

  ### running

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.running" name="running" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.21/qiskit_ibm_runtime/runtime_job_v2.py#L209-L211" signature="running()">
    Return whether the job is actively running.

    **Return type**

    `bool`
  </Function>

  ### status

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.status" name="status" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.21/qiskit_ibm_runtime/runtime_job_v2.py#L170-L177" signature="status()">
    Return the status of the job.

    **Return type**

    `Literal`\[‘INITIALIZING’, ‘QUEUED’, ‘RUNNING’, ‘CANCELLED’, ‘DONE’, ‘ERROR’]

    **Returns**

    Status of this job.
  </Function>

  ### stream\_results

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.stream_results" name="stream_results" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.21/qiskit_ibm_runtime/runtime_job_v2.py#L287-L315" signature="stream_results(callback, decoder=None)">
    Start streaming job results.

    **Parameters**

    *   **callback** (`Callable`) –

        Callback function to be invoked for any interim results and final result. The callback function will receive 2 positional parameters:

        > 1.  Job ID
        > 2.  Job result.

    *   **decoder** (`Optional`\[`Type`\[`ResultDecoder`]]) – A `ResultDecoder` subclass used to decode job results.

    **Raises**

    **RuntimeInvalidStateError** – If a callback function is already streaming results or if the job already finished.

    **Return type**

    `None`
  </Function>

  ### update\_tags

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.update_tags" name="update_tags" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.21/qiskit_ibm_runtime/base_runtime_job.py#L169-L196" signature="update_tags(new_tags)">
    Update the tags associated with this job.

    **Parameters**

    **new\_tags** (`List`\[`str`]) – New tags to assign to the job.

    **Return type**

    `List`\[`str`]

    **Returns**

    The new tags associated with this job.

    **Raises**

    **IBMApiError** – If an unexpected error occurred when communicating with the server or updating the job tags.
  </Function>

  ### wait\_for\_final\_state

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.wait_for_final_state" name="wait_for_final_state" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.21/qiskit_ibm_runtime/runtime_job_v2.py#L234-L269" signature="wait_for_final_state(timeout=None)">
    Use the websocket server to wait for the final the state of a job.

    The server will remain open if the job is still running and the connection will be terminated once the job completes. Then update and return the status of the job.

    **Parameters**

    **timeout** (`Optional`\[`float`]) – Seconds to wait for the job. If `None`, wait indefinitely.

    **Raises**

    **RuntimeJobTimeoutError** – If the job does not complete within given timeout.

    **Return type**

    `None`
  </Function>
</Class>

